# Quantus

./: .coveragerc  .editorconfig  .gitattributes  .gitignore  .isort.cfg  .pre-commit-config.yaml  .pre-commit-config.yaml.yaml  .readthedocs.yaml  CITATION  CONTRIBUTING.md  Getting-started.ipynb  LICENSE  MANIFEST.in  README.md  __init__.py  coverage.xml  mypy.ini  pr.patch  pyproject.toml  pytest.ini  quantus.toml  requirements.txt  requirements_dev.txt  requirements_nlp.txt  requirements_test.txt  setup.py  test_utils_tmp.py  tests.md  tox.ini  unnamed.patch  user_guidelines.md  userguidelines.md
.devcontainer/: Dockerfile  run.sh
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: codecov.yml  dev-release.yml  lint.yml  pre-release.yml  python-package-nlp.yml  python-package.yml  python-publish.yml  setup-tox.yml  snapshot-release.yml  test-installation.yml
METHOD_NAME/localtests/: run_experiment_1.sh  test-evaluation.sh
METHOD_NAME/nbs/: enhanced-MPT-dev.ipynb
METHOD_NAME/scripts/: main.py
_old/: attribution_computation.py
docs/: Makefile  README.md  dev_notes.md  developer_notes.md  nlp_evaluation.md  requirements_sphinx.txt
docs/docs_api/: quantus.helpers.perturb_func.rst  quantus.helpers.similarity_func.rst  quantus.metrics.complexity.complexity.rst  quantus.metrics.faithfulness.faithfulness_correlation.rst  quantus.metrics.faithfulness.region_perturbation.rst  quantus.metrics.randomisation.model_parameter_randomisation.rst  quantus.metrics.robustness.avg_sensitivity.rst  quantus.metrics.robustness.local_lipschitz_estimate.rst
docs/getting_started/: getting_started.md
docs/guidelines/: guidelines_and_disclaimers.md
docs/source/: conf.py  index.md  index.rst
eMPRT/localtests/: run-experiment-mptc-1.sh  test-evaluation.sh
eMPRT/nbs/: eMPRT_benchmarking_nb.ipynb  enhanced-MPT-dev copy.ipynb  enhanced-MPT-dev.ipynb
eMPRT/scripts/: check-eMPRT-noise-sensitivity.ipynb  enhanced-MPT-norm-and-qualityfunc.ipynb  label_map_imagenet.json  log_modelaccuracy.ipynb  main.py  plot-sMPRT.ipynb  plot_final_curves_from_cluster.ipynb  plotting.ipynb  test_main.ipynb  train_models_showcase_layer_entropy.ipynb
examples/nbs/: nb_robustness_test.ipynb  nb_robustness_test_example.ipynb
nbs/: Getting-started.ipynb  Measures.ipynb  Tutorial-comparing-explanation-methods.ipynb  Tutorial-evaluating-explanations-during-model-training.ipynb  Tutorial-measuring-sensitivity-of-hyperparameter-choice.ipynb  nb_measures.ipynb  nb_test_measures_.ipynb  np_adebayo_test.ipynb
notebooks/: train_test_cnn.ipynb  train_test_lenet.ipynb
notebooks/assets/: cnn_2d_cifar_weights.keras
phase_2/loaders/: data_interface.py  data_loader.py
phase_2/quantifier/: __init__.py  base.py
quantus/: __init__.py  config.py  evaluation.py  methods.py  typing.py
quantus/assets/: cifar10
quantus/functions/: complexity_func.py  discretise_func.py  explanation_func.py  handle_prediction_change_func.py  loss_func.py  mosaic_func.py  n_bins_func.py  norm_func.py  normalise_func.py  perturb_func.py  postprocess_func.py  similarity_func.py
quantus/helpers/: __init__.py  asserts.py  class_property.py  collection_utils.py  constants.py  discretise_func.py  enums.py  explanation_func.py  explanation_func_tf.py  hyperparam_tuning.py  local_func.py  loss_func.py  model_interface.py  models.py  mosaic_func.py  nlp_utils.py  norm_func.py  normalise_func.py  normalize_func.py  perturb_func.py  perturbation_utils.py  plotting.py  pytorch_model.py  q_types.py  relative_stability.py  relative_stability_objective.py  relative_stability_utils.py  similar_func.py  similarity_func.py  test_func.py  tf_model.py  tf_model_randomisation.py  tf_utils.py  torch_model_randomisation.py  torch_utils.py  types.py  utils.py  utils_nlp.py  warn.py  warn_func.py
quantus/metrics/: __init__.py  attribution_localization_test.py  axiomatic_metrics.py  axiomatic_tests.py  base.py  (+19 more)
requirements/: requirements_nlp.txt  requirements_nlp_test.txt  requirements_test.txt
scripts/: github_release.sh
tests/: README.md  __init__.py  benchmark_pixel_flipping.py  conftest.py  fixtures.py  markers.py  models.py  sample_models.py  test_evaluation.py  test_installation_extras.py  test_metrics.py  test_partial_installation.py  test_scenarios.md
tutorials/: .gitignore  Getting-started.ipynb  Getting_Started_with_NLP.ipynb  Measures.ipynb  README.md  Tutorial-comparing-explanation-methods.ipynb  Tutorial-evaluating-explanations-during-model-training.ipynb  Tutorial-measuring-sensitivity-of-hyperparameter-choice.ipynb  Tutorial_Builtin_NLP_XAI_Methods.ipynb  Tutorial_Customizing_NLP_Evaluation.ipynb  Tutorial_Explanation_Sensitivity_Evaluation_Model_Training.ipynb  Tutorial_Explore_Explanation_Wrappers.ipynb  Tutorial_Getting_Started.ipynb  Tutorial_Getting_Started_Tensorflow.ipynb  Tutorial_Getting_Started_with_NLP.ipynb  Tutorial_Getting_Started_with_Tabular_Data.ipynb  Tutorial_Getting_Started_with_Tensorflow.ipynb  Tutorial_Getting_Started_with_Time_Series_Data.ipynb  Tutorial_Getting_started_with_NLP.ipynb  Tutorial_Getting_started_with_NLP_Huggingface_Model.ipynb  Tutorial_Handle_Changes_In_Predictions.ipynb  Tutorial_ICLR_2023_Quantus_x_Climate_Applying_explainable_AI_evaluation_in_Climate_Science.ipynb  Tutorial_INVICTA_Spring_School_2024.ipynb  Tutorial_ImageNet_Example_All_Metrics.ipynb  Tutorial_ImageNet_Quantification_with_Quantus.ipynb  Tutorial_Introduction_to_AI_Interpretability_Course_2022.ipynb  Tutorial_Metric_Parameterisation_Analysis.ipynb  Tutorial_NLP_Customization.ipynb  Tutorial_NLP_Demonstration.ipynb  Tutorial_NLP_Demontration.ipynb  Tutorial_SFB_Spring_School_2023.ipynb  Tutorial_XAI_Sensitivity_Model_Training.ipynb  basic_example_all_metrics.ipynb  getting_started.ipynb  model_training_explanation_robustness.ipynb  model_training_explanation_sensitvitiy.ipynb  nb_localization_test.ipynb  requirements.txt  sensivitivty_metric_parameterisation.ipynb  sensivitivty_parameterisation.ipynb  (+17 more)
xai-quantification-toolbox/: user_interface.py
xai_quantification_toolbox/: __init__.py
(+5583 files in other folders)
