# A complete reference of pyproject.toml format can be found on: https://flit.pypa.io/en/stable/pyproject_toml.html
[project]
name = "quantus"

# Versions should comply with PEP 440:
# https://www.python.org/dev/peps/pep-0440/
description = "A metrics toolkit to evaluate neural network explanations."
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
keywords = ["explainable ai", "xai", "machine learning", "deep learning"]
authors = [
    { name = "Anna Hedstrom", email = "hedstroem.anna@gmail.com" }
]
maintainers = [
    { name = "Anna Hedstrom", email = "hedstroem.anna@gmail.com" }
]
# For a list of valid classifiers, see https://pypi.org/classifiers/
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.19.5",
    "pandas>=1.5.3",
    "opencv-python>=4.5.5.62",
    "scikit-image>=0.19.3",
    "scikit-learn>=0.24.2",
    "scipy>=1.7.3",
    "tqdm>=4.62.3",
    "matplotlib>=3.3.4",
    "cachetools",
]

dynamic = ["version"]

[project.urls]
"Documentation" = "https://quantus.readthedocs.io/en/latest/"
"Source" = "https://github.com/understandable-machine-intelligence-lab/Quantus"

# List additional groups of dependencies here (e.g. development dependencies).
# Users will be able to install these using the "extras" syntax, for example:
#
#   $ pip install quantus[tensorflow]
#
[project.optional-dependencies]
torch = [
    # Mac/Windows or unknown platform fallback
    "torch>=1.13.1; sys_platform != 'linux'",
    "torchvision>=0.15.1; sys_platform != 'linux'",

    # Linux + Python 3.8–3.10 → use torch 1.x
    "torch>=1.13.1, <2.0.0; sys_platform == 'linux' and python_version < '3.11'",
    "torchvision>=0.14.0, <0.15.1; sys_platform == 'linux' and python_version < '3.11'",

    # Linux + Python 3.11+ → use torch 2.x
    "torch>=2.0.0; sys_platform == 'linux' and python_version >= '3.11'",
    "torchvision>=0.15.1; sys_platform == 'linux' and python_version >= '3.11'",
]
tensorflow = [
    # 2.16 is shipped without keras
    "tensorflow<2.16.0",
    # keras V3 broke everything
    "keras<3",
    "numpy<2"
]
captum = [
    "quantus[torch]",
    "captum>=0.6.0"
]
tf-explain = [
    "quantus[tensorflow]",
    "tf-explain>=0.3.1"
]
zennit = [
    "quantus[torch]",
    "zennit>=0.5.1"
]
transformers = [
    "quantus[torch]",
    "transformers>=4.38.2", #"transformers<4.38.0"
]
full = [
    "quantus[captum,tf-explain,zennit,transformers,torch]"
]
tests = [
    "coverage>=7.2.3",
    "flake8>=6.0.0",
    "pytest<=7.4.4",
    "pytest-cov>=4.0.0",
    "pytest-lazy-fixture>=0.6.3",
    "pytest-mock==3.10.0",
    "pytest_xdist",
    "numpy<2",
    "quantus[full]"
]

[build-system]
requires = ["flit-core >= 3.4"]
build-backend = "flit_core.buildapi"
